--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "test": "jest",
     "watch": "nodemon server.js",
     "seed": "node seeds/index.js"
   },
@@ -17,12 +16,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "nodemon": "^2.0.3"
+    "jest": "^29.7.0",
+    "nodemon": "^2.0.3",
+    "sequelize-mock": "^0.10.2",
+    "supertest": "^7.0.0"
   },
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mysql2": "^2.1.0",
-    "sequelize": "^5.21.7"
+    "mysql2": "^3.9.7",
+    "sequelize": "^6.37.3"
   }
 }
